--- a/css/clases.css
+++ b/css/clases.css
@@ -26,7 +26,8 @@ h1{
     text-align: center;
     color: #FFF;
     font-size: 12px;
-    background-color: black;
+    background-color: rgba(0,0,0,0.7);
+    padding: 0,0,0,0;
     
    
  
