--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -3893,7 +3893,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .input-group-btn {
   width: 1%;
   white-space: nowrap;
-  vertical-align: middle;
+  vertical-align: top;
 }
 .input-group-addon {
   padding: 6px 12px;
@@ -3902,9 +3902,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   line-height: 1;
   color: #555;
   text-align: center;
-  background-color: #eee;
+  background-color: transparent;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-right: none;
 }
 .input-group-addon.input-sm {
   padding: 5px 10px;
