--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@
 
     background: url(../img/instructor_4.jpg)  no-repeat , 
                 url(../img/profesor_9.jpg)  no-repeat;
-    background-position: top left, top right ;
+    background-position: top left, top right;
     
     background-size: 51%, 50%;
     text-align: center;
@@ -87,6 +87,16 @@
     
 }
 
+.dobleimagen button a{
+    text-decoration: none;
+    
+}
+
+.dobleimagen button a:hover{
+    color: #fff;
+    
+}
+
 .frase{
     background: url(../img/textura_2.jpg);
     text-align: center;
@@ -100,7 +110,7 @@
 }
 
 .contenido_mapa .texto{
-    
+    margin-left: 7%;
 }
 .margen-contenido-mapa{
     margin-top: 6%;
