--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -75,7 +75,7 @@
     list-style: none;
     float: left;
     width:23%;
-    height:auto;
+    height:50%;
     margin-right:20px;
     margin-bottom:3%;
     margin-top: 5%;
