--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -56,9 +56,6 @@
     font-weight: bold;
 }
 
-
-
-
 #instructores .margenes1 {
     
     margin-right:20px;
@@ -71,21 +68,24 @@
     font-size: 25px;
 }
 
-
-#instructores .margenes1 ul li{
-    list-style: none;
-    float: left;
+#instructores .margenes1{
    
-    width:23%;
     height:auto;
     margin-right:20px;
-    margin-bottom:3%;
+    margin-bottom:5%;
     margin-top: 5%;
     color:#000;
 
 }
 
-#instructores .margenes1 ul li img{
+
+#instructores .margen-caja{
+   
+    margin-bottom:3%;
+    margin-top: 5%;
+}
+
+#instructores img{
     width: 100%;
     height: 270px; 
     margin-bottom:5%;
