--- a/css/clases.css
+++ b/css/clases.css
@@ -1,1 +1,80 @@
-/* Inserta tu codigo aqui */
+/* Cabecera */
+.titulo-clases{
+    text-align: center;
+    color: darkblue;
+   
+}
+
+
+/* seccion cursos */
+
+
+.imagen-curso {
+    width: 300px;
+    height: 400px;
+    
+    background-size:cover;
+    background-repeat: no-repeat;
+    display: table;
+    margin:0;
+    padding:0;
+}
+.fondo{
+    background-color:#eff4f3;
+}
+.imgfondo1{
+   background-image:url(../img/dance_12.jpg); 
+}
+.imgfondo2{
+   background-image:url(../img/breakdance.jpg); 
+}
+.imgfondo3{
+   background-image:url(../img/lirical-jazz.jpg); 
+}
+.imgfondo4{
+   background-image:url(../img/arabe.jpg); 
+}
+.imgfondo5{
+   background-image:url(../img/little.jpg); 
+}
+.imgfondo6{
+   background-image:url(../img/yoga.jpg); 
+}
+.cursos{
+    margin-left: 100px;
+}
+
+.row {
+    width: 95.333333%;
+    margin-bottom: 20px;
+}
+
+.texto-columna-curso{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    color: #FFF;
+    font-size: 14px;
+    color: rgba(225,225,225,0.7);
+    
+}
+.fondo h5{
+    background-color: rgba(0,0,0,0.5);
+    margin-bottom: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+}
+
+.fondo p {
+    background-color: rgba(0,0,0,0.5);
+    margin-bottom: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+}
+
