--- a/css/common.css
+++ b/css/common.css
@@ -64,10 +64,92 @@ footer .margen-pie{
 #contacto
 {
     background: url(../img/shoes_1.jpg) right no-repeat;
-    background-size: 60%;
+    background-size: 52%;
     background-position:95%;
 
 }
+
+
+/*Aplicando estilos al form*/
+*:focus{
+    outline: none;
+}
+
+::-webkit-validation-buble-message{
+    padding: 1em;
+}
+
+.form_hint{
+    font-size: 11px;
+}
+.contact_form input, .contact_form textarea{
+    border: 1px solid #aaa;
+    border-left: none;
+    
+    border-radius: 2px;
+    -moz-transition: padding .25s;
+    -webkit-transition: padding .25s;
+    -o-transition: padding .25s;
+    transition: padding .25s;
+    
+    padding-right: 30px;
+}
+/*invalido*/
+.contact_form input:focus:invalid, .contact_form textarea:focus:invalid{
+    background: transparent url(../img/invalido.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #d45252;
+    border-color: #b03535;
+}
+/*valido*/
+.contact_form input:required:valid, .contact_form textarea:required:valid{
+    background: transparent url(../img/valido.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #5cd053;
+    border-color: #28921f;
+}
+.contact_form input:focus, .contact_form textarea:focus{
+    background: transparent;
+    border: 1px solid #555;
+    box-shadow: 0 0 3px #aaa;
+    padding-right: 70px;
+}
+input:required, textarea:required{
+    background: url(../img/asteriscorojo.png) no-repeat 98% center;
+    background-size: 1.3%;
+}
+.form_hint{
+    background: #d45252;
+    border-radius: 3px 3px 3px 3px;
+    color: white;
+    margin-left: 8px;
+    padding: 1px 6px;
+    z-index: 999;
+    position: absolute;
+    display: none;
+}
+
+.form_hint::before{
+    content: "\25C0";
+    color: #d45252;
+    position: absolute;
+    top: 1px;
+    left: -6px;
+}
+
+.contact_form input:focus + .form_hint{
+    display: inline;
+}
+
+.contact_form input:required:valid + .form_hint{
+    background: #28921f;
+}
+
+.contact_form input:required:valid + .form_hint::before{
+    color: #28921f;
+}
+/*finalizado estilos al form*/
+
+
+
 .dadmyform{
     margin-top: 70px;
     margin-bottom: 70px;
