--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,11 @@
     text-align: center;
     margin-bottom: 8%;
 }
+
+.contenido_mapa .text-visita{
+    font-size: 1.5em;
+}
+
 .imagen img{
     background-size: contain;
     height: 250px;
